# nfl_data_project

./: .gitignore  pyproject.toml
data/: qb_season_stats_df.csv  team_rosters_2020.csv
database design/: code-export-6-15-2025-11_32_45-AM.txt  nfl-db-schema.md
workbooks/: QB.ipynb  RB.ipynb  api_testing.ipynb  main.ipynb  weekly_data.ipynb
