[project]
name = "nfl-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "appdirs==1.*",
    "fastparquet>0.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nfl-data-py>=0.3.3",
    "numpy==1.*",
    "pandas==1.*",
]
